changed selection outline to visible color now that it actually lines up with the board and stopped allowing selection of opponent pieces

--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -246,7 +246,7 @@ popup_input[type=text], popup_input[type=password] {
 }
 
 .selected_cell {
-  border: 1px solid black;
+  border: 2px solid lightskyblue;
 }
 
 #player1info {
